# word2vec

./: .gitignore  CMakeLists.txt  README.md
include/libword2vec/: NGrams.h  Parameters.h  TrainingThread.h  Vocabulary.h  VocabularyWord.h  WordModel.h
include/libword2vec/Server/: Connection.h  ConnectionManager.h  Header.h  MimeTypes.h  Reply.h  Request.h  RequestHandler.h  RequestParser.h  Server.h
scripts/: demo-word.sh
src/: HttpServer.cc  distance.c  distance.cc  word2phrase.c  word2phrase.cc  word2vec.cc
src/NGram/: addGramPosition.cc  getGrams.cc  gramVocToWordVec.cc  mergeAndSaveVectors.cc  minMaxGram.cc  ngrams.ih  sumFreqGram.cc  sumGram.cc  truncGram.cc  writeGramVocabularyToWordVectors.cc  writeGrams.cc
src/Server/: DistanceServer.cc
src/Server/Connection/: Connection.ih  constructor.cc  doRead.cc  doWrite.cc  start.cc  stop.cc
src/Server/ConnectionManager/: constructor.cc  start.cc  stop.cc  stopAll.cc
src/Server/MimeTypes/: extension_to_type.cc
src/Server/Reply/: Reply.cc
src/Server/RequestHandler/: RequestHandler.ih  constructor.cc  handleRequest.cc  url_decode.cc
src/Server/RequestParser/: constructor.cc  consume.cc  is_char.cc  is_ctl.cc  is_digit.cc  is_tspecial.cc  reset.cc
src/Server/Server/: constructor.cc  doAccept.cc  doAwaitStop.cc  run.cc
src/Trainer/: WordModel.cc  initUnigramTable.cc  word2vec.cc
src/TrainingThread/: trainCBOWModel.cc  trainCBOWModelGram.cc  trainSKIPMOdelGram.cc  trainSKIPModel.cc  trainSKIPModelGram.cc  trainingthread.ih
src/Vocabulary/: Vocabulary.cc  addWord.cc  createBinaryTree.cc  destructor.cc  getWordHash.cc  learnNGramFromFile.cc  read.cc  readTrainFile.cc  readTrainFileNgram.cc  readVocabulary.cc  readVocabularyFile.cc  readWord.cc  readWordHashBang.cc  readWordIndex.cc  reduce.cc  save.cc  search.cc  searchAndAdd.cc  searchVocabulary.cc  sort.cc  vocabulary.ih  wordComparator.cc
src/WordModel/: WordModel.cc  destructor.cc  findWords.cc  initUnigramTable.cc  readWordModels.cc  saveTrainResults.cc  saveTrainResultsNgrams.cc  train.cc  wordmodel.ih
